demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: project-886eef93-f40a-4b2c-887b-dda9b685cc60
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 8080
